src/objects/PLforcast__c.object
<CustomObject>
    <description>Connect PL and Budget</description>
    <fields>
        <fullName>A07PL_A__c</fullName>
        <formula>PLThis__r.A07__c - PLLast__r.A07__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の料理売上 - 前年度の料理売上</inlineHelpText>
        <label>#A07_料理_合計（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A07PL_B__c</fullName>
        <formula>IF(PLLast__r.A07__c&lt;&gt;0, A07PL_A__c / PLLast__r.A07__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の料理売上 - 前年度の料理売上) / 前年度の料理売上</inlineHelpText>
        <label>#A07_料理_合計（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A16PL_A__c</fullName>
        <formula>PLThis__r.A16__c - PLLast__r.A16__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の飲料売上 - 前年度の飲料売上</inlineHelpText>
        <label>#A16_飲料_合計（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A16PL_B__c</fullName>
        <formula>IF(PLLast__r.A16__c&lt;&gt;0, A16PL_A__c  /  PLLast__r.A16__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の飲料売上 - 前年度の飲料売上) / 前年度の飲料売上</inlineHelpText>
        <label>#A16_飲料_合計（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>A26PL_A__c</fullName>
        <formula>PLThis__r.A26__c - PLLast__r.A26__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の室料売上 - 前年度の室料売上</inlineHelpText>
        <label>#A26_室料_合計（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A26PL_B__c</fullName>
        <formula>IF(PLLast__r.A26__c&lt;&gt;0, A26PL_A__c  /  PLLast__r.A26__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の室料売上 - 前年度の室料売上) / 前年度の室料売上</inlineHelpText>
        <label>#A26_室料_合計（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B06PL_A__c</fullName>
        <formula>PLThis__r.B06__c - PLLast__r.B06__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の期首棚卸合計 - 前年度の期首棚卸合計</inlineHelpText>
        <label>#B06_期首棚卸高_合計（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B06PL_B__c</fullName>
        <formula>IF(PLLast__r.B06__c&lt;&gt;0, B06PL_A__c  /  PLLast__r.B06__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の期首棚卸合計 - 前年度の期首棚卸合計) / 前年度の期首棚卸合計</inlineHelpText>
        <label>#B06_期首棚卸高_合計（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B14PL_A__c</fullName>
        <formula>PLThis__r.B14__c - PLLast__r.B14__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の仕入合計 - 前年度の仕入合計</inlineHelpText>
        <label>#B14_仕入高_合計（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B14PL_B__c</fullName>
        <formula>IF(PLLast__r.B14__c&lt;&gt;0, B14PL_A__c  /  PLLast__r.B14__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の仕入合計 - 前年度の仕入合計) / 前年度の仕入合計</inlineHelpText>
        <label>#B14_仕入高_合計（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B20PL_A__c</fullName>
        <formula>PLThis__r.B20__c - PLLast__r.B20__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の期末棚卸合計 - 前年度の期末棚卸合計</inlineHelpText>
        <label>#B20_期末棚卸高_合計（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B20PL_B__c</fullName>
        <formula>IF(PLLast__r.B20__c&lt;&gt;0, B20PL_A__c  /  PLLast__r.B20__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の期末棚卸合計 - 前年度の期末棚卸合計) / 前年度の期末棚卸合計</inlineHelpText>
        <label>#B20_期末棚卸高_合計（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C01PL_A__c</fullName>
        <formula>PLThis__r.C01__c - PLLast__r.C01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の電気使用量[kWh] - 前年度の電気使用量[kWh]</inlineHelpText>
        <label>#C01_電気 [kWh]（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C01PL_B__c</fullName>
        <formula>IF(PLLast__r.C01__c&lt;&gt;0, C01PL_A__c  /  PLLast__r.C01__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の電気使用量[kWh] - 前年度の電気使用量[kWh]) / 前年度の電気使用量[kWh]</inlineHelpText>
        <label>#C01_電気 [kWh]（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C02PL_A__c</fullName>
        <formula>PLThis__r.C02__c - PLLast__r.C02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度のプロパンガス使用量[m3] - 前年度のプロパンガス使用量[m3]</inlineHelpText>
        <label>#C02_プロパンガス [m3]（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C02PL_B__c</fullName>
        <formula>IF(PLLast__r.C02__c&lt;&gt;0, C02PL_A__c / PLLast__r.C02__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度のプロパンガス使用量[m3] - 前年度のプロパンガス使用量[m3]) / 前年度のプロパンガス使用量[m3]</inlineHelpText>
        <label>#C02_プロパンガス [m3]（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C03PL_A__c</fullName>
        <formula>PLThis__r.C03__c - PLLast__r.C03__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の灯油使用量[L] - 前年度の灯油使用量[L]</inlineHelpText>
        <label>#C03_灯油 [L]（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C03PL_B__c</fullName>
        <formula>IF(PLLast__r.C03__c&lt;&gt;0, C03PL_A__c / PLLast__r.C03__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の灯油使用量[L] - 前年度の灯油使用量[L]) / 前年度の灯油使用量[L]</inlineHelpText>
        <label>#C03_灯油 [L]（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>D15PL_A__c</fullName>
        <formula>PLThis__r.D15__c - PLLast__r.D15__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の雇用形態別人件費合計 - 前年度の雇用形態別人件費合計</inlineHelpText>
        <label>#D15_人件費_雇用形態別_合計（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D16PL_A__c</fullName>
        <formula>PLThis__r.D16__c - PLLast__r.D16__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の雇用形態別人件費率 - 前年度の雇用形態別人件費率</inlineHelpText>
        <label>#D16_人件費_雇用形態別_人件費率（実績_前年比）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DateThis__c</fullName>
        <formula>PLThis__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>日付（年月[損益名]）（今年度）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimateThis__c</fullName>
        <label>予算（今年度）</label>
        <referenceTo>Estimate__c</referenceTo>
        <relationshipLabel>損益予算 (予算)</relationshipLabel>
        <relationshipName>EstimateThis</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>F01PL_A__c</fullName>
        <formula>PLThis__r.F01__c - PLLast__r.F01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の役員報酬 - 前年度の役員報酬</inlineHelpText>
        <label>#F01_役員報酬（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F02PL_A__c</fullName>
        <formula>PLThis__r.F02__c - PLLast__r.F02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の給与手当 - 前年度の給与手当</inlineHelpText>
        <label>#F02_給与手当（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F03PL_A__c</fullName>
        <formula>PLThis__r.F03__c - PLLast__r.F03__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の雑給 - 前年度の雑給</inlineHelpText>
        <label>#F03_雑給（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F47PL_B__c</fullName>
        <formula>IF(PLLast__r.F47__c&lt;&gt;0, F47PL_A__c  /  PLLast__r.F47__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(今年度の販売管理費合計 - 前年度の販売管理費合計) / 前年度の販売管理費合計</inlineHelpText>
        <label>#F47_販売管理費_合計（実績_前年比％）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>G01PL_A__c</fullName>
        <formula>PLThis__r.G01__c - PLLast__r.G01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の販管費率 - 前年度の販管費率</inlineHelpText>
        <label>#G01_販管費率（実績_前年比）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>H01PL_A__c</fullName>
        <formula>PLThis__r.H01__c - PLLast__r.H01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の売上総利益（粗利） - 前年度の売上総利益（粗利）</inlineHelpText>
        <label>#H01_売上総利益（粗利）（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H02PL_A__c</fullName>
        <formula>PLThis__r.H02__c - PLLast__r.H02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の粗利率 - 前年度の粗利率</inlineHelpText>
        <label>#H02_粗利率（実績_前年比）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>J01PL_A__c</fullName>
        <formula>PLThis__r.J01__c -  PLLast__r.J01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度のGOP - 前年度のGOP</inlineHelpText>
        <label>#J01_営業粗利益（GOP）（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>J02PL_A__c</fullName>
        <formula>PLThis__r.J02__c - PLLast__r.J02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度のGOP率 - 前年度のGOP率</inlineHelpText>
        <label>#J02_GOP率（実績_前年比）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>K01PL_A__c</fullName>
        <formula>PLThis__r.K01__c -  PLLast__r.K01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の営業利益 - 前年度の営業利益</inlineHelpText>
        <label>#K01_営業利益（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K02PL_A__c</fullName>
        <formula>PLThis__r.K02__c  -  PLLast__r.K02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の営業利益率 - 前年度の営業利益率</inlineHelpText>
        <label>#K02_営業利益率（実績_前年比）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L01PL_A__c</fullName>
        <formula>PLThis__r.L01__c  -  PLLast__r.L01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の収益 - 前年度の収益</inlineHelpText>
        <label>#L01_収益（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L02PL_A__c</fullName>
        <formula>PLThis__r.L02__c  -  PLLast__r.L02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の費用 - 前年度の費用</inlineHelpText>
        <label>#L02_費用（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L03PL_A__c</fullName>
        <formula>PLThis__r.L03__c  -  PLLast__r.L03__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の損益 - 前年度の損益</inlineHelpText>
        <label>#L03_損益（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M01PL_A__c</fullName>
        <formula>PLThis__r.M01__c -  PLLast__r.M01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の経常利益 - 前年度の経常利益</inlineHelpText>
        <label>#M01_経常利益（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M02PL_A__c</fullName>
        <formula>PLThis__r.M02__c  -  PLLast__r.M02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の経常利益率 - 前年度の経常利益率</inlineHelpText>
        <label>#M02_経常利益率（実績_前年比）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MonthThis__c</fullName>
        <formula>PLThis__r.Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLLast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>損益（前年度）</label>
        <referenceTo>ProfitandLoss__c</referenceTo>
        <relationshipLabel>損益予算 (損益)</relationshipLabel>
        <relationshipName>PLLast</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLThis__c</fullName>
        <label>損益（今年度）</label>
        <referenceTo>ProfitandLoss__c</referenceTo>
        <relationshipLabel>損益予算</relationshipLabel>
        <relationshipName>PLThis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ThisYear__c</fullName>
        <formula>PLThis__r.Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年度</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V06PL_A__c</fullName>
        <formula>PLThis__r.V06__c  -  PLLast__r.V06__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の客室部門の宿泊部門の人数 - 前年度の客室部門の宿泊部門の人数</inlineHelpText>
        <label>#V06_客室部門_宿泊部門_人数（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V07PL_A__c</fullName>
        <formula>PLThis__r.V07__c  -  PLLast__r.V07__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の客室部門の宿泊部門の売上 - 前年度の客室部門の宿泊部門の売上</inlineHelpText>
        <label>#V07_客室部門_宿泊部門_売上（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>V08PL_A__c</fullName>
        <formula>PLThis__r.V08__c  -  PLLast__r.V08__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の客室部門の宿泊部門の客室稼働率 - 前年度の客室部門の宿泊部門の客室稼働率</inlineHelpText>
        <label>#V08_客室部門_宿泊部門_客室稼働率（実績_前年比）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>W01PL_A__c</fullName>
        <formula>PLThis__r.W01__c  -  PLLast__r.W01__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の料飲部門の人数 - 前年度の料飲部門の人数</inlineHelpText>
        <label>#W01_料飲部門_人数（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W02PL_A__c</fullName>
        <formula>PLThis__r.W02__c  -  PLLast__r.W02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の料飲部門の売上 - 前年度の料飲部門の売上</inlineHelpText>
        <label>#W02_料飲部門_売上（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>W03PL_A__c</fullName>
        <formula>PLThis__r.W03__c  -  PLLast__r.W03__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>今年度の料飲部門の料理客単価 - 前年度の料飲部門の料理客単価</inlineHelpText>
        <label>#W03_料飲部門_料理客単価（実績_前年比）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>損益予算</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EstimateThis__c</columns>
        <columns>PLThis__c</columns>
        <columns>PLLast__c</columns>
        <columns>A75PL_A__c</columns>
        <columns>J01PL_A__c</columns>
        <columns>K01PL_A__c</columns>
        <columns>M01PL_A__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>損益予算#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>